--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "homepage": "https://vaadin.com/components",
   "scripts": {
     "test": "wct",
-    "docs": "npm run docs:analyze && npm run docs:clean && npm run docs:copy-sources && npm run docs:index && npm run docs:demo",
-    "docs:analyze": "polymer analyze vaadin-router.html > analysis.json",
+    "docs": "npm run docs:analyze && npm run docs:clean && npm run docs:copy-sources && npm run docs:index && npm run docs:demo && npm run docs:demo-iframe",
+    "docs:analyze": "polymer analyze *.html > analysis.json",
     "docs:clean": "rm -rf build docs",
-    "docs:copy-sources": "cp -r bower_components ./build && mkdir build/vaadin-router && cp -r demo vaadin-router.html index.html analysis.json build/vaadin-router",
+    "docs:copy-sources": "cp -r bower_components ./build && mkdir build/vaadin-router && cp -r demo *.html analysis.json build/vaadin-router",
     "docs:index": "cp polymer.json build && cd build && polymer build && mv build/es5-bundled ../docs",
-    "docs:demo": "cp demo/polymer.json build && cd build && polymer build && mv build/es5-bundled/vaadin-router/demo ../docs/vaadin-router"
+    "docs:demo": "cp demo/polymer.json build && cd build && polymer build && mv build/es5-bundled/vaadin-router/demo ../docs/vaadin-router",
+    "docs:demo-iframe": "cp demo/polymer.iframe.json build/polymer.json && cd build && polymer build && mv build/es5-bundled/vaadin-router/demo/vaadin-router-demo-iframe.html ../docs/vaadin-router/demo"
   },
   "devDependencies": {
     "bower": "latest",
