move the iframe-based demo snippet renderer to a branch in the vaadin-demo-helpers repo
 - remove the demo-specific code out of the vaadin-router repo
 - refactor the vaadin-router demos to use the iframe-based renderer from the vaadin-demo-helpers repo (from an own fork)

--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,6 @@
     "iron-demo-helpers": "^2.0.0",
     "webcomponentsjs": "^1.0.0",
     "web-component-tester": "^6.1.5",
-    "vaadin-demo-helpers": "vaadin/vaadin-demo-helpers"
+    "vaadin-demo-helpers": "vlukashov/vaadin-demo-helpers#feature/iframe-renderer"
   }
 }
