add support for route paramters (e.g. /users/:user)
The implementation is based on the MIT-licensed path-to-regexp library.
Features:
 - named parameters (e.g. /users/:user/messages/:messageId)
 - optional parameters marked with a `?` (e.g. /images/:size/:color? matches both /images/100x100 and /images/100x100/hotpink)
 - multi-segment parameters (zero or more marked with a `*`, one or more marked with a `+`) (e.g. /kb/:path+ matches /kb/general/insurance/personal and /kb/general)
 - regex patterns for parameter values (e.g. /icons/:width(\\d+)x:height(\\d+) matches /icons/96x96)
 - unnamed parameters (e.g. /users/(.*) matches /users/asdf)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://vaadin.com/components",
   "scripts": {
+    "postinstall": "bower install && gulp path-to-regexp",
     "test": "wct",
     "docs": "npm run docs:analyze && npm run docs:clean && npm run docs:copy-sources && npm run docs:index && npm run docs:demo && npm run docs:demo-iframe",
     "docs:analyze": "polymer analyze *.html > analysis.json",
@@ -36,7 +37,12 @@
     "gulp-eslint": "^4.0.0",
     "gulp-html-extract": "^0.3.0",
     "gulp-stylelint": "^7.0.0",
+    "path-to-regexp": "^2.2.0",
     "polymer-cli": "^1.6.0",
+    "rollup": "^0.57.1",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-license": "^0.6.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "stylelint": "^9.0.0",
     "stylelint-config-vaadin": "latest",
     "web-component-tester": "^6.1.5",
