add an npm script to check the size of the vaadin-router bundle
Run with `npm run size-control` and check the output for lines like 'full-polymer vaadin-router-bundle.html 8.61 kB'. Currently the size control script detects the size of the vaadin-router bundle in 3 scenarios:
  - for an app that already uses all parts of Polymer 2 ('full-polymer' in the output)
  - for an app that already the most common parts of Polymer 2 ('some-polymer' in the output)
  - for an app that does not use Polymer 2 at all ('no-polymer' in the output)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "postinstall": "bower install && gulp path-to-regexp",
     "test": "wct",
+    "size-control": "gulp size-control",
     "docs": "npm run docs:analyze && npm run docs:clean && npm run docs:copy-sources && npm run docs:index && npm run docs:demo && npm run docs:demo-iframe",
     "docs:analyze": "polymer analyze *.html > analysis.json",
     "docs:clean": "rm -rf build docs",
@@ -30,12 +31,15 @@
   },
   "devDependencies": {
     "bower": "latest",
+    "del": "^3.0.0",
     "eslint": "^4.13.0",
     "eslint-config-vaadin": "latest",
     "eslint-plugin-html": "^4.0.0",
     "gulp": "latest",
     "gulp-eslint": "^4.0.0",
     "gulp-html-extract": "^0.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-size": "^3.0.0",
     "gulp-stylelint": "^7.0.0",
     "path-to-regexp": "^2.2.0",
     "polymer-cli": "^1.6.0",
@@ -43,6 +47,7 @@
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-license": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "run-sequence": "^2.2.1",
     "stylelint": "^9.0.0",
     "stylelint-config-vaadin": "latest",
     "web-component-tester": "^6.1.5",
