--- a/package.json
+++ b/package.json
@@ -21,13 +21,8 @@
     "postinstall": "bower install && gulp path-to-regexp",
     "test": "wct",
     "size-control": "gulp size-control",
-    "docs": "npm run docs:analyze && npm run docs:clean && npm run docs:copy-sources && npm run docs:index && npm run docs:demo && npm run docs:demo-iframe",
-    "docs:analyze": "polymer analyze *.html > analysis.json",
-    "docs:clean": "rm -rf build docs",
-    "docs:copy-sources": "cp -r bower_components ./build && mkdir build/vaadin-router && cp -r demo *.html analysis.json build/vaadin-router",
-    "docs:index": "cp polymer.json build && cd build && polymer build && mv build/es5-bundled ../docs",
-    "docs:demo": "cp demo/polymer.json build && cd build && polymer build && mv build/es5-bundled/vaadin-router/demo ../docs/vaadin-router",
-    "docs:demo-iframe": "cp demo/polymer.iframe.json build/polymer.json && cd build && polymer build && mv build/es5-bundled/vaadin-router/demo/vaadin-router-demo-iframe.html ../docs/vaadin-router/demo"
+    "docs": "npm run docs:analyze && gulp docs",
+    "docs:analyze": "polymer analyze *.html > analysis.json"
   },
   "devDependencies": {
     "bower": "latest",
@@ -35,6 +30,7 @@
     "eslint": "^4.13.0",
     "eslint-config-vaadin": "latest",
     "eslint-plugin-html": "^4.0.0",
+    "fs-extra": "^5.0.0",
     "gulp": "latest",
     "gulp-eslint": "^4.0.0",
     "gulp-html-extract": "^0.3.0",
