--- a/core/package.json
+++ b/core/package.json
@@ -6,6 +6,10 @@
   "browser": "dist/umd/vaadin-router-core.js",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-plugin-mocha": "^5.0.0",
+    "mocha": "^5.0.5",
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0"
@@ -16,6 +20,7 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "build:watch": "rollup -c -w"
+    "build:watch": "rollup -c -w",
+    "test": "mocha"
   }
 }
