--- a/core/package.json
+++ b/core/package.json
@@ -6,21 +6,21 @@
   "browser": "dist/umd/vaadin-router-core.js",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.19.1",
-    "eslint-plugin-mocha": "^5.0.0",
-    "mocha": "^5.0.5",
+    "bower": "^1.8.4",
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.3.0"
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "web-component-tester": "^6.5.0"
   },
   "dependencies": {
     "path-to-regexp": "2.2.0",
     "universal-router": "6.0.0"
   },
   "scripts": {
+    "install": "bower install",
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
-    "test": "mocha"
+    "start": "polymer serve",
+    "test": "wct"
   }
 }
