--- a/core/package.json
+++ b/core/package.json
@@ -10,6 +10,7 @@
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "wct-istanbub": "^0.1.1",
     "web-component-tester": "^6.5.0"
   },
   "dependencies": {
