--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "stylelint": "^9.0.0",
     "stylelint-config-vaadin": "latest",
     "universal-router": "^6.0.0",
+    "wct-istanbub": "^0.1.1",
     "web-component-tester": "^6.1.5",
     "yargs": "^8.0.0"
   }
