--- a/core/package.json
+++ b/core/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.8.4",
+    "browser-sync": "^2.23.6",
+    "npm-run-all": "^4.1.2",
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
@@ -22,6 +24,8 @@
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
     "start": "polymer serve",
-    "test": "wct"
+    "test": "npm run build && wct",
+    "test:browser-sync": "browser-sync 'http://localhost:8000' --files test dist",
+    "test:watch": "npm-run-all --parallel start build:watch test:browser-sync"
   }
 }
