--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   "homepage": "https://vaadin.com/components",
   "scripts": {
     "postinstall": "bower install && gulp lib",
+    "start": "polymer serve",
     "test": "wct",
+    "test:browser-sync": "browser-sync 'http://localhost:8081' --files './*.html' test core/dist",
+    "test:watch": "npm-run-all --parallel start test:browser-sync",
     "size-control": "gulp size-control",
     "docs": "npm run docs:analyze && gulp docs",
     "docs:analyze": "polymer analyze *.html > analysis.json"
   },
   "devDependencies": {
     "bower": "latest",
+    "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "eslint": "^4.13.0",
     "eslint-config-vaadin": "latest",
@@ -37,6 +41,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-size": "^3.0.0",
     "gulp-stylelint": "^7.0.0",
+    "npm-run-all": "^4.1.2",
     "path-to-regexp": "^2.2.0",
     "polymer-cli": "^1.6.0",
     "rollup": "^0.57.1",
