--- a/core/package.json
+++ b/core/package.json
@@ -13,7 +13,8 @@
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "wct-istanbub": "^0.1.1",
-    "web-component-tester": "^6.5.0"
+    "web-component-tester": "^6.5.0",
+    "yargs": "^11.0.0"
   },
   "dependencies": {
     "path-to-regexp": "2.2.0",
