--- a/core/package.json
+++ b/core/package.json
@@ -22,11 +22,14 @@
   },
   "scripts": {
     "install": "bower install",
+    "lint": "# the 'lint' script for the core package is not implemented yet",
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
-    "start": "polymer serve",
-    "test": "npm run build && wct",
-    "test:browser-sync": "browser-sync 'http://localhost:8000' --files test dist",
-    "test:watch": "npm-run-all --parallel start build:watch test:browser-sync"
+    "start": "polymer serve --port 8000",
+    "start:browser-sync": "browser-sync 'http://localhost:8000' --files test dist",
+    "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
+    "test": "wct",
+    "test:coverage": "wct --profile=coverage",
+    "size-control": "# the 'size-control' script for the core package is not implemented yet"
   }
 }
