--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     }
   ],
   "devDependencies": {
-    "bower": "latest",
+    "bower": "^1.8.4",
     "browser-sync": "^2.23.6",
     "bundlesize": "^0.17.0",
     "del": "^3.0.0",
@@ -44,25 +44,19 @@
     "eslint-config-vaadin": "latest",
     "eslint-plugin-html": "^4.0.0",
     "fs-extra": "^5.0.0",
-    "gulp": "latest",
+    "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
     "gulp-html-extract": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^3.0.0",
-    "gulp-stylelint": "^7.0.0",
+    "gulp-stylelint": "^6.0.0",
     "npm-run-all": "^4.1.2",
-    "path-to-regexp": "^2.2.0",
     "polymer-cli": "^1.6.0",
-    "rollup": "^0.57.1",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-license": "^0.6.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
     "run-sequence": "^2.2.1",
-    "stylelint": "^9.0.0",
+    "stylelint": "^8.0.0",
     "stylelint-config-vaadin": "latest",
-    "universal-router": "^6.0.0",
     "wct-istanbub": "^0.1.1",
-    "web-component-tester": "^6.1.5",
-    "yargs": "^8.0.0"
+    "web-component-tester": "^6.5.0",
+    "yargs": "^11.0.0"
   }
 }
