--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vaadin-router",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha1",
   "description": "vaadin-router",
   "main": "vaadin-router.html",
   "repository": "vaadin/vaadin-router",
@@ -18,9 +18,9 @@
   },
   "homepage": "https://vaadin.com/components",
   "scripts": {
-    "postinstall": "bower install && cd core && yarn install && yarn build",
+    "install": "bower install && cd core && yarn install && yarn build",
     "lint": "gulp lint && polymer lint --rules polymer-2 --input *.html",
-    "start": "polymer serve",
+    "start": "polymer serve --port 8081",
     "start:browser-sync": "browser-sync 'http://localhost:8081' --files './*.html' test core/dist",
     "start:watch": "npm-run-all --parallel start start:browser-sync",
     "test": "wct",
