--- a/core/.eslintrc.json
+++ b/core/.eslintrc.json
@@ -1,4 +1,13 @@
 {
+  "extends": "vaadin",
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "globals": {
+    "Vaadin": false
+  },
   "parserOptions": {
     "sourceType": "module"
   }
