--- a/core/package.json
+++ b/core/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://vaadin.com/components",
   "scripts": {
     "install": "bower install",
-    "lint": "# the 'lint' script for the core package is not implemented yet",
+    "lint": "eslint *.js src test",
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
     "start": "polymer serve --port 8000",
@@ -37,6 +37,8 @@
   "devDependencies": {
     "bower": "^1.8.4",
     "browser-sync": "^2.23.6",
+    "eslint": "^4.19.1",
+    "eslint-config-vaadin": "latest",
     "npm-run-all": "^4.1.2",
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
