--- a/core/package.json
+++ b/core/package.json
@@ -22,27 +22,35 @@
   "scripts": {
     "install": "bower install",
     "lint": "eslint *.js src test",
-    "build": "rollup -c",
+    "build": "rollup -c && uglifyjs dist/umd/vaadin-router-core.js --source-map --output dist/umd/vaadin-router-core.min.js",
     "build:watch": "rollup -c -w",
     "start": "polymer serve --port 8000",
     "start:browser-sync": "browser-sync 'http://localhost:8000' --files test dist",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
     "test": "wct",
     "test:coverage": "wct --profile=coverage",
-    "size-control": "# the 'size-control' script for the core package is not implemented yet"
+    "size-control": "bundlesize"
   },
+  "bundlesize": [
+    {
+      "path": "dist/umd/vaadin-router-core.min.js",
+      "maxSize": "5 kB"
+    }
+  ],
   "dependencies": {
     "path-to-regexp": "2.2.0"
   },
   "devDependencies": {
     "bower": "^1.8.4",
     "browser-sync": "^2.23.6",
+    "bundlesize": "^0.17.0",
     "eslint": "^4.19.1",
     "eslint-config-vaadin": "latest",
     "npm-run-all": "^4.1.2",
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "uglify-es": "^3.3.9",
     "wct-istanbub": "^0.1.1",
     "web-component-tester": "^6.5.0",
     "yargs": "^11.0.0"
