set up Travis CI: lint, test, coverage, and bundle size (#60)
Both in the router and the router-core packages:
 - `yarn lint` runs a linter and fails the build on errors. The linter configs are `.eslintrc`, `.stylelintrc` and the default `polymer-2` ruleset of the polymer CLI linter.
 - `yarn test:coverage` runs unit tests in a local chrome, reports the test coverage (with istanbul), and fails the build if the coverage is below the threshold set in `wct.conf.js`
 - `yarn test` runs integration tests in all local browsers (via WCT) and fails the build on failure
 - `yarn size-control` calculates the effective library size (minified, gzipped) and fails the build if it exeeds the threshold set in `package.json`.

All 4 NPM scripts are executed on Travis for both the core and the element modules. The coverage thresholds are set to 80% for the core and 50% for the element (to make the builds pass, since the work on the element is not started and there is not enough tests there). The bundle size limits are set to 5kB and 10kB minified gzipped for the core and the element modules respectively.

Fixes #12

--- a/core/package.json
+++ b/core/package.json
@@ -1,32 +1,58 @@
 {
   "name": "vaadin-router-core",
   "version": "1.0.0-alpha1",
+  "description": "vaadin-router core",
   "main": "dist/vaadin-router-core.js",
   "module": "dist/es/vaadin-router-core.js",
   "browser": "dist/umd/vaadin-router-core.js",
-  "license": "MIT",
+  "repository": "vaadin/vaadin-router",
+  "keywords": [
+    "Vaadin",
+    "vaadin-router",
+    "router",
+    "client-side",
+    "web-components"
+  ],
+  "author": "Vaadin Ltd",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/vaadin/vaadin-router/issues"
+  },
+  "homepage": "https://vaadin.com/components",
+  "scripts": {
+    "install": "bower install",
+    "lint": "eslint *.js src test",
+    "build": "rollup -c && uglifyjs dist/umd/vaadin-router-core.js --source-map --output dist/umd/vaadin-router-core.min.js",
+    "build:watch": "rollup -c -w",
+    "start": "polymer serve --port 8000",
+    "start:browser-sync": "browser-sync 'http://localhost:8000' --files test dist",
+    "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
+    "test": "wct",
+    "test:coverage": "wct --profile=coverage",
+    "size-control": "bundlesize"
+  },
+  "bundlesize": [
+    {
+      "path": "dist/umd/vaadin-router-core.min.js",
+      "maxSize": "5 kB"
+    }
+  ],
+  "dependencies": {
+    "path-to-regexp": "2.2.0"
+  },
   "devDependencies": {
     "bower": "^1.8.4",
     "browser-sync": "^2.23.6",
+    "bundlesize": "^0.17.0",
+    "eslint": "^4.19.1",
+    "eslint-config-vaadin": "latest",
     "npm-run-all": "^4.1.2",
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "uglify-es": "^3.3.9",
     "wct-istanbub": "^0.1.1",
     "web-component-tester": "^6.5.0",
     "yargs": "^11.0.0"
-  },
-  "dependencies": {
-    "path-to-regexp": "2.2.0",
-    "universal-router": "6.0.0"
-  },
-  "scripts": {
-    "install": "bower install",
-    "build": "rollup -c",
-    "build:watch": "rollup -c -w",
-    "start": "polymer serve",
-    "test": "npm run build && wct",
-    "test:browser-sync": "browser-sync 'http://localhost:8000' --files test dist",
-    "test:watch": "npm-run-all --parallel start build:watch test:browser-sync"
   }
 }
