--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vaadin-router",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha1",
   "description": "vaadin-router",
   "main": "vaadin-router.html",
   "repository": "vaadin/vaadin-router",
@@ -18,42 +18,45 @@
   },
   "homepage": "https://vaadin.com/components",
   "scripts": {
-    "postinstall": "bower install && gulp lib",
-    "start": "polymer serve",
+    "install": "bower install && cd core && yarn install && yarn build",
+    "lint": "gulp lint && polymer lint --rules polymer-2 --input *.html",
+    "start": "polymer serve --port 8081",
+    "start:browser-sync": "browser-sync 'http://localhost:8081' --files './*.html' test core/dist",
+    "start:watch": "npm-run-all --parallel start start:browser-sync",
     "test": "wct",
-    "test:browser-sync": "browser-sync 'http://localhost:8081' --files './*.html' test core/dist",
-    "test:watch": "npm-run-all --parallel start test:browser-sync",
-    "size-control": "gulp size-control",
+    "test:coverage": "wct --profile=coverage",
+    "size-control": "gulp size-control && bundlesize",
     "docs": "npm run docs:analyze && gulp docs",
     "docs:analyze": "polymer analyze *.html > analysis.json"
   },
+  "bundlesize": [
+    {
+      "path": "size-control/build/no-polymer/vaadin-router-bundle.html",
+      "maxSize": "10 kB"
+    }
+  ],
   "devDependencies": {
-    "bower": "latest",
+    "bower": "^1.8.4",
     "browser-sync": "^2.23.6",
+    "bundlesize": "^0.17.0",
     "del": "^3.0.0",
     "eslint": "^4.13.0",
     "eslint-config-vaadin": "latest",
     "eslint-plugin-html": "^4.0.0",
     "fs-extra": "^5.0.0",
-    "gulp": "latest",
+    "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
     "gulp-html-extract": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^3.0.0",
-    "gulp-stylelint": "^7.0.0",
+    "gulp-stylelint": "^6.0.0",
     "npm-run-all": "^4.1.2",
-    "path-to-regexp": "^2.2.0",
     "polymer-cli": "^1.6.0",
-    "rollup": "^0.57.1",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-license": "^0.6.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
     "run-sequence": "^2.2.1",
-    "stylelint": "^9.0.0",
+    "stylelint": "^8.0.0",
     "stylelint-config-vaadin": "latest",
-    "universal-router": "^6.0.0",
     "wct-istanbub": "^0.1.1",
-    "web-component-tester": "^6.1.5",
-    "yargs": "^8.0.0"
+    "web-component-tester": "^6.5.0",
+    "yargs": "^11.0.0"
   }
 }
