--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://vaadin.com/components",
   "scripts": {
-    "install": "bower install && cd core && yarn install && yarn build",
+    "install": "bower install && cd core && npm install && npm run build",
     "lint": "gulp lint && polymer lint --rules polymer-2 --input *.html",
     "start": "polymer serve --port 8081",
     "start:browser-sync": "browser-sync 'http://localhost:8081' --files './*.html' test core/dist",
@@ -51,12 +51,12 @@
     "gulp-size": "^3.0.0",
     "gulp-stylelint": "^6.0.0",
     "npm-run-all": "^4.1.2",
-    "polymer-cli": "^1.6.0",
+    "polymer-cli": "^1.7.1",
     "run-sequence": "^2.2.1",
-    "stylelint": "^8.0.0",
+    "stylelint": "^9.0.0",
     "stylelint-config-vaadin": "latest",
     "wct-istanbub": "^0.1.1",
-    "web-component-tester": "^6.5.0",
+    "web-component-tester": "^6.6.0",
     "yargs": "^11.0.0"
   }
 }
