--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ language: node_js
 node_js: 8.9
 
 cache:
-  yarn: true
   directories:
     - node_modules
 
@@ -19,12 +18,12 @@ branches:
 
 script:
   - cd core
-  - yarn lint
-  - xvfb-run -s '-screen 0 1024x768x24' yarn test:coverage
-  - xvfb-run -s '-screen 0 1024x768x24' yarn test
-  - yarn size-control
+  - npm run lint
+  - xvfb-run -s '-screen 0 1024x768x24' npm run test:coverage
+  - xvfb-run -s '-screen 0 1024x768x24' npm test
+  - npm run size-control
   - cd ..
-  - yarn lint
-  - xvfb-run -s '-screen 0 1024x768x24' yarn test:coverage
-  - xvfb-run -s '-screen 0 1024x768x24' yarn test
-  - yarn size-control
+  - npm run lint
+  - xvfb-run -s '-screen 0 1024x768x24' npm run test:coverage
+  - xvfb-run -s '-screen 0 1024x768x24' npm test
+  - npm run size-control
