add polymer-cli into dev dependencies of vaadin-router-core
so that running `npm run start` in `/core` uses the local polymer-cli which version is defined in package.json, not the global one

--- a/core/package.json
+++ b/core/package.json
@@ -48,6 +48,7 @@
     "eslint": "^4.19.1",
     "eslint-config-vaadin": "latest",
     "npm-run-all": "^4.1.2",
+    "polymer-cli": "^1.7.1",
     "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
