lift the contents of /core up into the root
 - remove all vaadin-router-* custom elements (they are kept in the `vaadin-router-element` branch)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,17 +5,10 @@
     "node": true,
     "es6": true
   },
-  "plugins": [
-    "html"
-  ],
   "globals": {
-    "Polymer": false,
     "Vaadin": false
   },
-  "overrides": [{
-    "files": ["gulpfile.js"],
-    "parserOptions": {
-      "ecmaVersion": 2017
-    }
-  }]
+  "parserOptions": {
+    "sourceType": "module"
+  }
 }
