--- a/bower.json
+++ b/bower.json
@@ -1,36 +1,13 @@
 {
-  "name": "vaadin-router",
-  "homepage": "https://vaadin.com/components",
+  "name": "vaadin-router-core",
+  "main": "dist/umd/vaadin-router-core.js",
   "authors": [
-    "Vaadin Ltd"
+    "Viktor Lukashov <viktor@vaadin.com>"
   ],
-  "description": "vaadin-router",
-  "main": "vaadin-router.html",
-  "keywords": [
-    "Vaadin",
-    "vaadin-router",
-    "web-components",
-    "web-component",
-    "polymer"
-  ],
-  "license": "Apache-2.0",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "gulpfile.js",
-    "package-lock.json",
-    "wct.conf.js"
-  ],
+  "license": "MIT",
+  "homepage": "https://github.com/vaadin/vaadin-router",
   "dependencies": {
-    "polymer": "^2.0.0",
-    "vaadin-themable-mixin": "^1.1.3"
-  },
-  "devDependencies": {
-    "iron-component-page": "^3.0.0",
-    "iron-demo-helpers": "^2.0.0",
-    "webcomponentsjs": "^1.0.0",
-    "web-component-tester": "^6.1.5",
-    "vaadin-demo-helpers": "vlukashov/vaadin-demo-helpers#feature/iframe-renderer"
+    "web-component-tester": "^6.5.0",
+    "webcomponentsjs": "^1.2.0"
   }
 }
