update build scripts, tests, docs and demos
Now they only need to work for Vaadin.Router, not for the `<vaadin-router>` element.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,16 @@
     "es6": true
   },
   "globals": {
+    "Polymer": false,
     "Vaadin": false
   },
   "parserOptions": {
     "sourceType": "module"
-  }
+  },
+  "overrides": [{
+    "files": ["gulpfile.js"],
+    "parserOptions": {
+      "ecmaVersion": 2017
+    }
+  }]
 }
