--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vaadin-router-core",
+  "name": "vaadin-router",
   "version": "1.0.0-alpha1",
-  "description": "vaadin-router core",
-  "main": "dist/vaadin-router-core.js",
-  "module": "dist/es/vaadin-router-core.js",
-  "browser": "dist/umd/vaadin-router-core.js",
+  "description": "Small and powerfull client-side router for Web Components. Works great with any framework.",
+  "main": "dist/vaadin-router.js",
+  "module": "dist/es/vaadin-router.js",
+  "browser": "dist/umd/vaadin-router.js",
   "repository": "vaadin/vaadin-router",
   "keywords": [
     "Vaadin",
@@ -18,22 +18,24 @@
   "bugs": {
     "url": "https://github.com/vaadin/vaadin-router/issues"
   },
-  "homepage": "https://vaadin.com/components",
+  "homepage": "https://vaadin.com",
   "scripts": {
     "install": "bower install",
-    "lint": "eslint *.js src test",
-    "build": "rollup -c && uglifyjs dist/umd/vaadin-router-core.js --source-map --output dist/umd/vaadin-router-core.min.js",
+    "lint": "gulp lint",
+    "build": "rollup -c && uglifyjs dist/umd/vaadin-router.js --source-map --output dist/umd/vaadin-router.min.js",
     "build:watch": "rollup -c -w",
     "start": "polymer serve --port 8000",
-    "start:browser-sync": "browser-sync 'http://localhost:8000' --files test dist",
+    "start:browser-sync": "browser-sync 'http://localhost:8000' --files test dist demo analysis.json",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
     "test": "wct",
     "test:coverage": "wct --profile=coverage",
-    "size-control": "bundlesize"
+    "size-control": "bundlesize",
+    "docs": "yarn docs:analyze && gulp docs",
+    "docs:analyze": "polymer analyze dist/umd/vaadin-router.js dist/umd/click-navigation-trigger.js > analysis.json"
   },
   "bundlesize": [
     {
-      "path": "dist/umd/vaadin-router-core.min.js",
+      "path": "dist/umd/vaadin-router.min.js",
       "maxSize": "5 kB"
     }
   ],
@@ -44,14 +46,21 @@
     "bower": "^1.8.4",
     "browser-sync": "^2.23.6",
     "bundlesize": "^0.17.0",
-    "eslint": "^4.19.1",
+    "eslint": "^4.19.0",
     "eslint-config-vaadin": "latest",
-    "npm-run-all": "^4.1.2",
+    "fs-extra": "^6.0.0",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^4.0.0",
+    "gulp-html-extract": "^0.3.0",
+    "gulp-stylelint": "^7.0.0",
+    "npm-run-all": "^4.1.0",
     "polymer-cli": "1.6.0",
     "rollup": "^0.59.0",
-    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "uglify-es": "^3.3.9",
+    "stylelint": "^9.0.0",
+    "stylelint-config-vaadin": "latest",
+    "uglify-es": "^3.3.0",
     "wct-istanbub": "^0.1.1",
     "web-component-tester": "6.5.0",
     "yargs": "^11.0.0"
