include the `build` step into the CI script
otherwise tests cannot run since there is no code to test

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ branches:
 
 script:
   - yarn lint
+  - yarn build
   - xvfb-run -s '-screen 0 1024x768x24' yarn test:coverage
   - xvfb-run -s '-screen 0 1024x768x24' yarn test
   - yarn size-control
