--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vaadin-router",
   "version": "1.0.0-alpha1",
-  "description": "Small and powerfull client-side router for Web Components. Works great with any framework.",
+  "description": "Small and powerfull client-side router for Web Components. Framework-agnostic.",
   "main": "dist/vaadin-router.js",
   "module": "dist/es/vaadin-router.js",
   "browser": "dist/umd/vaadin-router.js",
