address review comments
 - bring eslint-plugin-html back (and remove the lint gulp tasks)
 - include demos into the stylelint scope, and fix the issues it found
 - recommend `npm start` instead of `npm run start` in README.md
 - do not assume Yarn is installed (start all NPM scripts with `npm run [script-name]`)
 - run the `build` script automatically after `install`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
     "node": true,
     "es6": true
   },
+  "plugins": [
+    "html"
+  ],
   "globals": {
     "Polymer": false,
     "Vaadin": false
