--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
   },
   "homepage": "https://vaadin.com",
   "scripts": {
-    "install": "bower install",
-    "lint": "gulp lint",
+    "install": "bower install && npm run build",
+    "lint": "npm-run-all --parallel lint:*",
+    "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
+    "lint:css": "stylelint demo/**/*.html",
     "build": "rollup -c && uglifyjs dist/umd/vaadin-router.js --source-map --output dist/umd/vaadin-router.min.js",
     "build:watch": "rollup -c -w",
     "start": "polymer serve --port 8000",
     "start:browser-sync": "browser-sync 'http://localhost:8000' --files test dist demo analysis.json",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
-    "test": "wct",
+    "test": "wct && npm run test:coverage",
     "test:coverage": "wct --profile=coverage",
     "size-control": "bundlesize",
-    "docs": "yarn docs:analyze && gulp docs",
+    "docs": "npm run docs:analyze && gulp docs",
     "docs:analyze": "polymer analyze dist/umd/vaadin-router.js dist/umd/click-navigation-trigger.js > analysis.json"
   },
   "bundlesize": [
@@ -48,11 +50,9 @@
     "bundlesize": "^0.17.0",
     "eslint": "^4.19.0",
     "eslint-config-vaadin": "latest",
+    "eslint-plugin-html": "^4.0.0",
     "fs-extra": "^6.0.0",
     "gulp": "^3.9.0",
-    "gulp-eslint": "^4.0.0",
-    "gulp-html-extract": "^0.3.0",
-    "gulp-stylelint": "^7.0.0",
     "npm-run-all": "^4.1.0",
     "polymer-cli": "1.6.0",
     "rollup": "^0.59.0",
