--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "rollup -c && uglifyjs dist/umd/vaadin-router.js --source-map --output dist/umd/vaadin-router.min.js",
     "build:watch": "rollup -c -w",
     "start": "polymer serve --port 8000",
-    "start:browser-sync": "browser-sync 'http://localhost:8000' --files test dist demo analysis.json",
+    "start:browser-sync": "browser-sync start --config bs-config.js",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
     "test": "wct && npm run test:coverage",
     "test:coverage": "wct --profile=coverage",
