Fix incorrect jsdoc reference. Force docs task to regenerate sourced before running. Regenerate docs.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "wct && npm run test:coverage",
     "test:coverage": "wct --profile=coverage",
     "size-control": "bundlesize",
-    "docs": "npm run docs:analyze && gulp docs",
+    "docs": "npm run build && npm run docs:analyze && gulp docs",
     "docs:analyze": "polymer analyze dist/umd/vaadin-router.js > analysis.json"
   },
   "bundlesize": [
