--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "iron-component-page": "^3.0.0",
     "iron-demo-helpers": "^2.0.0",
     "polymer": "^2.0.0",
-    "vaadin-demo-helpers": "vlukashov/vaadin-demo-helpers#feature/iframe-renderer"
+    "vaadin-demo-helpers": "web-padawan/vaadin-demo-helpers#fix/iframe-base-href"
   }
 }
+
