--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@vaadin/router",
   "version": "1.0.0-alpha.0",
-  "description": "Small and powerfull client-side router for Web Components. Framework-agnostic.",
-  "main": "dist/vaadin-router.js",
-  "module": "dist/es/vaadin-router.js",
-  "browser": "dist/umd/vaadin-router.js",
+  "description": "Small and powerful client-side router for Web Components. Framework-agnostic.",
+  "main": "dist/vaadin-router.umd.js",
+  "browser": "dist/vaadin-router.mjs",
   "repository": "vaadin/vaadin-router",
   "keywords": [
     "Vaadin",
@@ -24,7 +23,9 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
     "lint:css": "stylelint demo/**/*.html",
-    "build": "rollup -c && uglifyjs dist/umd/vaadin-router.js -c -m --mangle-props regex=/^__/ --source-map --output dist/umd/vaadin-router.min.js",
+    "build": "rollup -c && npm-run-all --parallel build:minify.*",
+    "build:minify.module": "uglifyjs dist/vaadin-router.umd.js -c -m --mangle-props regex=/^__/ --source-map --output dist/vaadin-router.umd.min.js",
+    "build:minify.browser": "uglifyjs dist/vaadin-router.mjs -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.mjs",
     "build:watch": "rollup -c -w",
     "start": "polymer serve --port 8000",
     "start:browser-sync": "browser-sync start --config bs-config.js",
@@ -33,20 +34,28 @@
     "test:coverage": "wct --profile=coverage",
     "size-control": "bundlesize",
     "docs": "npm run build && npm run docs:analyze && gulp docs",
-    "docs:analyze": "polymer analyze dist/umd/vaadin-router.js > analysis.json"
+    "docs:analyze": "polymer analyze dist/vaadin-router.umd.js > analysis.json",
+    "browserslist": "browserslist && browserslist --coverage"
   },
   "bundlesize": [
     {
-      "path": "dist/umd/vaadin-router.min.js",
+      "path": "dist/vaadin-router.min.mjs",
       "maxSize": "6 kB"
     }
+  ],
+  "browserslist": [
+    "> 0.5% in alt-EU",
+    "> 0.5% in alt-NA"
   ],
   "dependencies": {
     "path-to-regexp": "2.2.0"
   },
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "bower": "^1.8.4",
     "browser-sync": "^2.23.6",
+    "browserslist": "^3.2.8",
     "bundlesize": "^0.17.0",
     "eslint": "^4.19.0",
     "eslint-config-vaadin": "latest",
@@ -56,6 +65,7 @@
     "npm-run-all": "^4.1.0",
     "polymer-cli": "1.6.0",
     "rollup": "^0.59.0",
+    "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "stylelint": "^9.0.0",
