define the list of supported browsers and run tests on all of them
 - use browserslist and babel-preset-env to defined the list of supported browsers
 - upgrade to the latest WCT and polymer-cli to make tests run in older browsers (the tests use async/await and require transpilation)
 - pin the version of polyserve to 0.27.8 to avoid the issue with source maps when running the tests / demos locally (see https://github.com/Polymer/tools/issues/389)
 - add throttling for pushState / replaceState methods to avoid hitting browser-set limits in Safari and Chrome

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,9 @@ branches:
 
 script:
   - yarn lint
-  - xvfb-run -s '-screen 0 1024x768x24' yarn test
+  - if [[ $TRAVIS_PULL_REQUEST == "false" && "$TRAVIS_BRANCH" == "master" ]]; then
+      wct --env saucelabs;
+    else
+      xvfb-run -s '-screen 0 1024x768x24' yarn test;
+    fi
   - yarn size-control
