--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build:minify.module": "uglifyjs dist/vaadin-router.umd.js -c -m --mangle-props regex=/^__/ --source-map --output dist/vaadin-router.umd.min.js",
     "build:minify.browser": "uglifyjs dist/vaadin-router.mjs -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.mjs",
     "build:watch": "rollup -c -w",
-    "start": "polymer serve --port 8000",
+    "start": "polyserve --port 8000",
     "start:browser-sync": "browser-sync start --config bs-config.js",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
     "test": "wct && npm run test:coverage",
@@ -44,13 +44,21 @@
     }
   ],
   "browserslist": [
-    "> 0.5% in alt-EU",
-    "> 0.5% in alt-NA"
+    "last 2 Chrome major versions",
+    "last 2 Android major versions",
+    "last 2 Firefox major versions",
+    "last 2 Edge major versions",
+    "last 2 Safari major versions",
+    "last 2 iOS major versions",
+    "Safari 9",
+    "iOS 9",
+    "IE 11"
   ],
   "dependencies": {
     "path-to-regexp": "2.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "bower": "^1.8.4",
@@ -63,7 +71,8 @@
     "fs-extra": "^6.0.0",
     "gulp": "^3.9.0",
     "npm-run-all": "^4.1.0",
-    "polymer-cli": "1.6.0",
+    "polymer-cli": "^1.7.2",
+    "polyserve": "0.27.8",
     "rollup": "^0.59.0",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.0",
@@ -72,7 +81,7 @@
     "stylelint-config-vaadin": "latest",
     "uglify-es": "^3.3.0",
     "wct-istanbub": "^0.1.1",
-    "web-component-tester": "6.5.0",
+    "web-component-tester": "6.6.0",
     "yargs": "^11.0.0"
   }
 }
