update CI build script after the package.json update

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ branches:
    - master
 
 script:
+  - yarn install:dependencies
   - yarn lint
   - if [[ $TRAVIS_PULL_REQUEST == "false" && "$TRAVIS_BRANCH" == "master" ]]; then
       wct --env saucelabs;
