rewrite Router.render() using async and await
 - this helped to uncover a number of order-of-execution issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,12 +13,7 @@
     "Vaadin": false
   },
   "parserOptions": {
-    "sourceType": "module"
-  },
-  "overrides": [{
-    "files": ["gulpfile.js"],
-    "parserOptions": {
-      "ecmaVersion": 2017
-    }
-  }]
+    "sourceType": "module",
+    "ecmaVersion": 2017
+  }
 }
