--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@vaadin/router",
   "version": "0.4.0",
   "description": "Small and powerful client-side router for Web Components. Framework-agnostic.",
-  "main": "dist/vaadin-router.umd.js",
-  "browser": "dist/vaadin-router.js",
+  "main": "dist/vaadin-router.js",
   "repository": "vaadin/vaadin-router",
   "keywords": [
     "Vaadin",
