add `Router` to the list of allowed globals for eslint in demos

--- a/demo/.eslintrc.json
+++ b/demo/.eslintrc.json
@@ -3,6 +3,7 @@
   },
   "globals": {
     "ElementDemo": false,
-    "DemoReadyEventEmitter": false
+    "DemoReadyEventEmitter": false,
+    "Router": false
   }
 }
