--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "stylelint": "^9.0.0",
     "stylelint-config-vaadin": "latest",
     "uglify-es": "^3.3.0",
-    "wct-istanbub": "^0.1.1",
+    "wct-istanbul": "^0.14.3",
     "web-component-tester": "6.6.0",
     "yargs": "^11.0.0"
   }
