--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "IE 11"
   ],
   "dependencies": {
-    "@vaadin/vaadin-usage-statistics": "^2.0.0-alpha4",
+    "@vaadin/vaadin-usage-statistics": "^2.0.0-beta2",
     "path-to-regexp": "2.2.1"
   },
   "devDependencies": {
