Update Babel to v7

--- a/package.json
+++ b/package.json
@@ -65,9 +65,8 @@
     "path-to-regexp": "2.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "bower": "^1.8.8",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.6.6",
