chore: update Babel and Rollup dev dependencies (#348)
* Update Rollup dependencies
* Update Babel to v7

Fixes #345

--- a/package.json
+++ b/package.json
@@ -65,9 +65,8 @@
     "path-to-regexp": "2.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "bower": "^1.8.8",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.6.6",
@@ -80,10 +79,10 @@
     "npm-run-all": "^4.1.5",
     "polymer-cli": "^1.9.11",
     "polyserve": "0.27.15",
-    "rollup": "^0.68.2",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup": "^1.19.4",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "stylelint": "^10.1.0",
     "stylelint-config-vaadin": "latest",
     "uglify-es": "^3.3.9",
