feat: add TypeScript declarations (#353)
Fixes #304

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "files": [
     "index.js",
     "index.polyfilled.js",
+    "interfaces.d.ts",
     "src",
     "dist/vaadin-router.*"
   ],
@@ -29,15 +30,17 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
     "lint:css": "stylelint demo/**/*.html",
-    "build": "rollup -c && npm-run-all --parallel build:minify.*",
+    "build": "rollup -c && npm-run-all --parallel build:minify.* build:typescript-declarations",
     "build:minify.module": "uglifyjs dist/vaadin-router.umd.js -c -m --source-map content=dist/vaadin-router.umd.js.map,url=vaadin-router.umd.min.js.map --output dist/vaadin-router.umd.min.js",
     "build:minify.browser": "uglifyjs dist/vaadin-router.js -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.js",
+    "build:typescript-declarations": "gen-typescript-declarations --outDir . --verify",
     "build:watch": "rollup -c -w",
     "start": "npm run build && polyserve --port 8000",
     "start:browser-sync": "browser-sync start --config bs-config.js",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
-    "test": "wct && npm run test:coverage",
+    "test": "wct && npm run test:coverage && npm run test:typescript-declarations",
     "test:coverage": "wct --profile=coverage",
+    "test:typescript-declarations": "tsc --noEmit",
     "size-control": "bundlesize",
     "docs": "npm run build && npm run docs:analyze && gulp docs",
     "docs:analyze": "polymer analyze dist/vaadin-router.js src/documentation/*.js > analysis.json",
@@ -68,6 +71,8 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@types/form-data": "^2.5.0",
     "bower": "^1.8.8",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.6.6",
@@ -87,6 +92,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "stylelint": "^10.1.0",
     "stylelint-config-vaadin": "latest",
+    "typescript": "^3.5.3",
     "uglify-es": "^3.3.9",
     "wct-istanbul": "^0.14.3",
     "web-component-tester": "6.9.2",
