Update Rollup dependencies

--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@polymer/gen-typescript-declarations": "^1.6.0",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "@types/form-data": "^2.5.0",
     "bower": "^1.8.0",
     "browser-sync": "^2.26.0",
@@ -90,9 +93,6 @@
     "polymer-cli": "^1.9.0",
     "polyserve": "^0.27.0",
     "rollup": "^2.10.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "stylelint": "^13.3.0",
     "stylelint-config-vaadin": "^0.1.0",
     "typescript": "^3.8.0",
