chore: update more dependencies

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "browserslist": "^4.14.3",
     "bundlesize": "^0.18.0",
     "eslint": "^7.9.0",
-    "eslint-config-vaadin": "^0.2.0",
+    "eslint-config-vaadin": "0.2.7",
     "eslint-plugin-html": "^6.1.0",
     "fs-extra": "^9.0.1",
     "gulp": "^4.0.2",
@@ -90,11 +90,11 @@
     "gulp-git": "^2.10.1",
     "gulp-replace": "^1.0.0",
     "npm-run-all": "^4.1.5",
-    "polymer-cli": "^1.9.0",
-    "polyserve": "^0.27.0",
+    "polymer-cli": "^1.9.11",
+    "polyserve": "^0.27.15",
     "rollup": "^2.27.1",
     "stylelint": "^13.7.1",
-    "stylelint-config-vaadin": "^0.1.0",
+    "stylelint-config-vaadin": "0.1.4",
     "typescript": "^4.0.2",
     "uglify-es": "^3.3.9",
     "wct-istanbul": "^0.14.3",
