--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "homepage": "https://vaadin.com",
   "files": [
-    "index.js",
-    "index.polyfilled.js",
+    "vaadin-router.js",
     "interfaces.d.ts",
     "src",
     "dist/vaadin-router.*"
@@ -31,11 +30,10 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
     "lint:css": "stylelint demo/**/*.html",
-    "build": "rollup -c && npm-run-all --parallel build:minify.* build:typescript-declarations",
-    "build:minify.module": "uglifyjs dist/vaadin-router.umd.js -c -m --source-map content=dist/vaadin-router.umd.js.map,url=vaadin-router.umd.min.js.map --output dist/vaadin-router.umd.min.js",
+    "build": "tsc && npm-run-all --parallel build:minify.* build:typescript-declarations",
     "build:minify.browser": "uglifyjs dist/vaadin-router.js -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.js",
     "build:typescript-declarations": "gen-typescript-declarations --outDir .",
-    "build:watch": "rollup -c -w",
+    "build:watch": "tsc -w",
     "start": "npm run build && polyserve --port 8000",
     "start:browser-sync": "browser-sync start --config bs-config.cjs",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
@@ -69,11 +67,7 @@
     "path-to-regexp": "^6.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.13.10",
     "@polymer/gen-typescript-declarations": "^1.6.2",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/form-data": "^2.5.0",
     "bower": "^1.8.12",
     "browser-sync": "^2.26.14",
@@ -89,9 +83,8 @@
     "npm-run-all": "^4.1.5",
     "polymer-cli": "^1.9.11",
     "polyserve": "^0.27.15",
-    "rollup": "^2.79.1",
     "stylelint": "^13.12.0",
-    "typescript": "^4.9.4",
+    "typescript": "^5.0.4",
     "uglify-es": "^3.3.9",
     "wct-istanbul": "^0.14.3",
     "web-component-tester": "^6.9.2",
