--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
     "test": "wct && npm run test:coverage && npm run test:typescript-declarations",
     "test:coverage": "wct --profile=coverage",
-    "test:typescript-declarations": "tsc --noEmit",
+    "test:typescript-declarations": "tsc -p test/tsconfig.json --noEmit",
     "size-control": "bundlesize",
     "docs": "npm run build && npm run docs:analyze && gulp -f gulpfile.cjs docs",
     "docs:analyze": "polymer analyze dist/vaadin-router.js src/documentation/*.js > analysis.json",
